source/blender/editors/render/render_shading.c
@@ -43,6 +43,7 @@
 #include "BLT_translation.h"
 
 #include "BKE_animsys.h"
+#include "BKE_brush.h"
 #include "BKE_context.h"
 #include "BKE_curve.h"
 #include "BKE_editmesh.h"
@@ -530,6 +531,11 @@ static int new_material_exec(bContext *C, wmOperator *UNUSED(op))
 		Material *new_ma = NULL;
 		BKE_id_copy_ex(bmain, &ma->id, (ID **)&new_ma, LIB_ID_COPY_DEFAULT | LIB_ID_COPY_ACTIONS);
 		ma = new_ma;
+
+		if (ob != NULL && ob->type == OB_GPENCIL) {
+			BKE_brush_update_material(bmain, new_ma, NULL);
+		}
+
 	}
 	else {
 		const char *name = DATA_("Material");
